# serve

./: .gitignore  Makefile  Taskfile.yml  compose.yaml  pyproject.toml  pytest.ini
notebooks/: test.config.ipynb  test_embd.ipynb
scripts/: Taskfile.yml
scripts/dev/: Taskfile.yml
scripts/dev/mlflow/: Taskfile.yml  compose.minio.yml  compose.simple.yml  config.env
scripts/tasks/mlflow_gcs_llamacapp/: Taskfile.yml
src/serve/: __init__.py  main.py  serve_cli.py
src/serve/_cli/: __init__.py  task.py
src/serve/experiment/mlflow/: artifact_ingest_gcs.py  llamacpp.py
src/serve/experiment_tracker/hugging_face/: download.py
src/serve/experiment_tracker/mlflow/mlflow_gcp_llamacpp/: cli.py  download.py  manager.py
src/serve/experiment_tracker/mlflow/mlflow_llamacpp/: cli.py  llama_cpp_pyfunc.py  manager.py
src/serve/mlflow/: check.py  config.py  main.py  model_config.py  upload_model.py
src/serve/servers/embedding/: Taskfile.yml  Taskfile1.yml  main.py
src/serve/servers/llamacpp/: Taskfile.yml  main.py  serve.py
src/serve/utils/: model_config.py
src/serve/utils/gcs/: download.py
src/serve/utils/mlflow/: config.py  model.py
tests/test_llamacpp_mlflow/: test_gguf_ingestion.py  test_gguf_ingestion_cloud.py  test_mlflow_config.py  test_model_config.py  test_simple_ingestion.py
tests/test_llamacpp_mlflow/test_embedding/: test_ingest.py  test_mlflow_config.py
tests/test_llamacpp_mlflow/test_embedding/prj/: serve.py
