[project]
name = "serve"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.3",
    "go-task-bin>=3.41.0",
    "google-cloud-storage",
    "loguru>=0.7.3",
    "tqdm>=4.67.1",
    "python-dotenv>=1.0.1",
]


[project.scripts]
serve-cmd = "serve.serve_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.pytest.ini_options]
pythonpath = ["./tests"]
addopts = "--color=yes"

[dependency-groups]

mlflow-llamacpp-dev = [
    "ipykernel>=6.29.5",
    "pytest>=8.3.5",
    "python-dotenv>=1.0.1",
    "scikit-learn>=1.6.1",
    "serve[mlflow-llamacpp]",
]

mlflow-embedding-dev = [
    "serve[mlflow-embedding]",
    "pytest>=8.3.5",
    "ipykernel>=6.29.5",
]
llamacpp-dev = ["serve[llamacpp]"]

[project.optional-dependencies]
mlflow = ["mlflow>=2.20.1"]
llamacpp = ["llama-cpp-python>=0.3.7"]
mlflow-llamacpp = ["serve[llamacpp]", "mlflow>=2.20.1"]
mlflow-llamacpp-gcs = [
    "serve[llamacpp]",
    "google-cloud-storage",
    "mlflow>=2.20.1",
]

[tool.ruff]
line-length = 120
target-version = "py39"
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "C",    # flake8-comprehensions
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "YTT",  # flake8-2020
    "S",    # flake8-bandit
    "DTZ",  # flake8-datetimez,
    "E4",
    "E7",
    "E9",
    "F",
    "E302",
]
ignore = [
    "E501", # line too long, handled by formatter
]
fixable = ["ALL"]
unfixable = []
isort.known-first-party = ["data", "ml", "orchestration"]
isort.section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]
# isort.combine-as-imports = false
isort.lines-between-types = 1
isort.no-lines-before = ["future", "standard-library"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"
